[package]
name = "rust_wasi_runtime"
version = "0.1.0"
authors = ["Mike Moran <mike@houseofmoran.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmtime = "0.8"
wasmtime-jit = "0.8"
wasmtime-wasi = "0.11"
clap = "2.33"
